cmake_minimum_required(VERSION 3.6)
project(cc-examples)
set(CMAKE_CXX_STANDARD 11)

add_executable(3d_surface_area              hacker_rank/algorithms/implementation/3d_surface_area.cc)
add_executable(larrys_array                 hacker_rank/algorithms/implementation/larrys_array.cc)
add_executable(closest_numbers              hacker_rank/algorithms/sorting/closest_numbers.cc)
add_executable(counting_sort_3              hacker_rank/algorithms/sorting/counting_sort_3.cc)
add_executable(counting_sort_4              hacker_rank/algorithms/sorting/counting_sort_4.cc)
add_executable(beautiful_binary_string      hacker_rank/algorithms/strings/beautiful_binary_string.cc)
add_executable(make_it_anagram_mglines      hacker_rank/algorithms/strings/make_it_anagram_mglines.cc)
add_executable(separate_the_numbers         hacker_rank/algorithms/strings/separate_the_numbers.cc)
add_executable(string_construction          hacker_rank/algorithms/strings/string_construction.cc)
add_executable(the_love_letter_mistery      hacker_rank/algorithms/strings/the_love_letter_mistery.cc)
add_executable(weighted-uniform-string      hacker_rank/algorithms/strings/weighted-uniform-string.cc)