cmake_minimum_required(VERSION 3.6)
project(cc-examples)
set(CMAKE_CXX_STANDARD 11)

add_executable(3d_surface_area              hacker_rank/algorithms/implementation/3d_surface_area.cc)
add_executable(larrys_array                 hacker_rank/algorithms/implementation/larrys_array.cc)
add_executable(closest_numbers              hacker_rank/algorithms/sorting/closest_numbers.cc)
add_executable(counting_sort_3              hacker_rank/algorithms/sorting/counting_sort_3.cc)
add_executable(counting_sort_4              hacker_rank/algorithms/sorting/counting_sort_4.cc)
add_executable(find_the_median              hacker_rank/algorithms/sorting/find_the_median.cc)
add_executable(anagram                      hacker_rank/algorithms/strings/anagram.cc)
add_executable(beautiful_binary_string      hacker_rank/algorithms/strings/beautiful_binary_string.cc)
add_executable(game_of_thrones_1            hacker_rank/algorithms/strings/game_of_thrones_1.cc)
add_executable(make_it_anagram_mglines      hacker_rank/algorithms/strings/make_it_anagram_mglines.cc)
add_executable(making_anagrams              hacker_rank/algorithms/strings/making_anagrams.cc)
add_executable(separate_the_numbers         hacker_rank/algorithms/strings/separate_the_numbers.cc)
add_executable(sherlock_and_anagrams        hacker_rank/algorithms/strings/sherlock_and_anagrams.cc)
add_executable(string_construction          hacker_rank/algorithms/strings/string_construction.cc)
add_executable(the_love_letter_mystery      hacker_rank/algorithms/strings/the_love_letter_mystery.cc)
add_executable(weighted-uniform-string      hacker_rank/algorithms/strings/weighted-uniform-string.cc)

add_executable(box_it                       hacker_rank/cpp/classes/box_it.cc)
add_executable(classes_objects              hacker_rank/cpp/classes/classes_objects.cc)