add_executable(anagram anagram.cc)
add_executable(beautiful_binary_string beautiful_binary_string.cc)
add_executable(game_of_thrones_1 game_of_thrones_1.cc)
add_executable(make_it_anagram_mglines make_it_anagram_mglines.cc)
add_executable(making_anagrams making_anagrams.cc)
add_executable(separate_the_numbers separate_the_numbers.cc)
add_executable(sherlock_and_anagrams sherlock_and_anagrams.cc)
add_executable(string_construction string_construction.cc)
add_executable(the_love_letter_mystery the_love_letter_mystery.cc)
add_executable(weighted-uniform-string weighted-uniform-string.cc)
